--- a/views/example.html
+++ b/views/example.html
@@ -1,7 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/css/style.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <h1>The Tech Blog</h1>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Dashboard</a>
+                  </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Logout</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+            
+
 <div class="container">
     <div class="row">
-        <div class="col-8 offset-md-2">
-            <div class="card">
+        <div class="col-6 offset-md-3">
       <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Login</button>
@@ -15,7 +48,7 @@
             <form class="form login-form">
                 <div class="form-group">
                     <label for="username-login" class="form-label">Username: </label>
-                    <input class="form-input form-control" type="text" id="username-login" />
+                    <input class="form-input form-control" type="text" id="email-login" />
                 </div>
                 <div class="form-group">
                     <label for="password-login" class="form-label">Password: </label>
@@ -30,11 +63,11 @@
             <form class="form signup-form">
                 <div class="form-group">
                     <label for="username-signup" class="form-label">Username: </label>
-                    <input class="form-input form-control" type="text" id="username-signup" />
+                    <input class="form-input form-control" type="text" id="email-login" />
                 </div>
                 <div class="form-group">
                     <label for="password-signup" class="form-label">Password: </label>
-                    <input class="form-input form-control" type="password" id="password-signup" />
+                    <input class="form-input form-control" type="password" id="password-login" />
                 </div></br>
                 <div class="form-group">
                     <button class="btn btn-primary" type="submit">Sign Up</button>
@@ -45,6 +78,6 @@
     </div>
 </div>
 </div>
-</div>
-
-<script src="./js/login.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
